Added support of getClientRects() for SVG Elements.

As per spec, if the element has an associated SVG layout box return
a sequence containing a single DOMRect object that describes
the bounding box of the element as defined by the SVG specification,
applying the transforms that apply to the element and its ancestors.

Spec:
https://drafts.csswg.org/cssom-view/#dom-element-getclientrects

BUG=643044

Review-Url: https://codereview.chromium.org/2349653002
Cr-Commit-Position: refs/heads/master@{#421850}

Former-commit-id: f5b0ce2c5f861ddc285bf79fec1a4281a1d3db15